# hcm-air-quality-pipeline

./: .env.example  .gitignore  Makefile  README.md  README_v1.md  notes.md  pyproject.toml
.github/workflows/: dbt_ci.yml
dbt/hcm_air_quality/: dbt_project.yml
dbt/hcm_air_quality/models/marts/: mart_daily_aqi.sql  mart_pollutants.sql  schema.yml
dbt/hcm_air_quality/models/staging/: schema.yml  sources.yml  stg_historical.sql  stg_hourly.sql
dbt/hcm_air_quality/tests/: assert_aqi_range.sql  assert_pollutants_non_negative.sql
kestra/: docker-compose.yml  explain_process_docker.md  setup_kv.sh  spark.Dockerfile  transform_hourly.py
kestra/flows/: historical_backfill.yml  historical_bakfill.yml  hourly_air_quality_ingest.yml
notebooks/: transform_historical.ipynb  transform_hourly.ipynb
notebooks/.ipynb_checkpoints/: transform_historical-checkpoint.ipynb  transform_hourly-checkpoint.ipynb
notebooks/exploration/: transform_hourly.ipynb
spark/: transform_historical.py  transform_hourly.py
terraform/: main.tf  outputs.tf  variables.tf
